[package]
name = "hyper"
version = "1.0.1"
description = "A fast and correct HTTP library."
readme = "README.md"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper"
repository = "https://github.com/hyperium/hyper"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
edition = "2018"
rust-version = "1.63" # keep in sync with MSRV.md dev doc

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[dependencies]
bytes = "1"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
h2 = { version = "0.4" }
http = "1"
http-body = "1"
httparse = { version = "1.8" }
httpdate = { version = "1.0" }
itoa = { version = "1" }
pin-project-lite = "0.2.4"
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
want = { version = "0.3" }

# Optional

http-body-util = { version = "0.1", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
form_urlencoded = "1"
http-body-util = "0.1"
pretty_env_logger = "0.5"
spmc = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "net",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
] }
tokio-test = "0.4"

[features]
# C-API support (currently unstable (no semver))
ffi = ["dep:libc", "dep:http-body-util"]

# internal features used in CI
nightly = []

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "client_json"
path = "examples/client_json.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"

[[example]]
name = "gateway"
path = "examples/gateway.rs"

[[example]]
name = "graceful_shutdown"
path = "examples/graceful_shutdown.rs"

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "http_proxy"
path = "examples/http_proxy.rs"

[[example]]
name = "multi_server"
path = "examples/multi_server.rs"

[[example]]
name = "params"
path = "examples/params.rs"

[[example]]
name = "send_file"
path = "examples/send_file.rs"

[[example]]
name = "service_struct_impl"
path = "examples/service_struct_impl.rs"

[[example]]
name = "single_threaded"
path = "examples/single_threaded.rs"

[[example]]
name = "state"
path = "examples/state.rs"

[[example]]
name = "upgrades"
path = "examples/upgrades.rs"

[[example]]
name = "web_api"
path = "examples/web_api.rs"


[[bench]]
name = "body"
path = "benches/body.rs"

[[bench]]
name = "connect"
path = "benches/connect.rs"

[[bench]]
name = "end_to_end"
path = "benches/end_to_end.rs"

[[bench]]
name = "pipeline"
path = "benches/pipeline.rs"

[[bench]]
name = "server"
path = "benches/server.rs"


[[test]]
name = "client"
path = "tests/client.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "server"
path = "tests/server.rs"
